Add contracts input field and update calculations in P&L calculator

--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
           />
         </div>
       </div>
+      <div class="field-group">
+        <label for="contracts">Number of Contracts (optional)</label>
+        <div class="input-with-prefix">
+          <input
+            id="contracts"
+            type="number"
+            inputmode="numeric"
+            min="1"
+            step="1"
+            placeholder="1"
+          />
+        </div>
+      </div>
 
       <div class="field-group">
         <label for="percentChange">
