Add prefix styling for contracts input field and adjust input styles

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <div class="field-group">
         <label for="contracts">Number of Contracts (optional)</label>
         <div class="input-with-prefix">
+          <span class="prefix" aria-hidden="true"></span>
           <input
             id="contracts"
             type="number"
